# Sistem-Manajemen-Informasi-Tabung-Hijau

backend/: .env.example  .gitignore  Cargo.toml  compose.yml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260430_004204_create_table_users.rs  m20260502_013829_create_tabel_wilayah.rs  m20260502_014459_create_tabel_kategori_sampah.rs  m20260502_015120_create_tabel_user.rs  m20260502_022617_create_tabel_transaksi_sampah.rs  m20260502_023012_create_tabel_tabungan_sampah.rs  m20260504_110625_tambah_kolom_totp_user.rs  m20260504_131630_tambah_kolom_otp_reset.rs
backend/src/: handlers.rs  main.rs
backend/src/entities/: kategori_sampah.rs  mod.rs  prelude.rs  tabungan_sampah.rs  transaksi_sampah.rs  user.rs  wilayah.rs
backend/src/entity/: mod.rs  prelude.rs  setoran.rs  users.rs
sim-th-frontend/: index.html  package-lock.json  package.json
sim-th-frontend/src/: App.jsx
