[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.0"
chrono = "0.4.44"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lettre = { version = "0.11.21", features = ["tokio1", "tokio1-native-tls", "builder"] }
rand = "0.10.1"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth"] }
tower-http = { version = "0.6.8", features = ["cors"] }
